--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,13 +5,11 @@ const currentYear = new Date().getFullYear()
 ---
 
 <footer>
-  <CallToAction />
+<!--   <CallToAction /> -->
   <section class="py-8">
     <div class="container">
       <p>
-        &copy; {currentYear} - Starter Theme for <a href="https://astro.build/">Astro</a>. Made with ❤️ by <a
-          href="https://github.com/markteekman">Mark Teekman</a
-        >.
+        &copy; {currentYear} - The Print Crew | A premium community created by <a href="https://jessepoteet.com">Jesse Poteet</a> & <a href="https://startupscreenprinting.com">Startup Screen Printing</a> | All Rights Reserved
       </p>
     </div>
   </section>
