--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,20 +8,13 @@ const { src = '/astronaut-hero-img.webp' } = Astro.props
   <div class="container">
     <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
       <div class="flex flex-col items-center gap-8 md:items-start">
-        <h1 class="text-center text-6xl md:text-left lg:text-8xl">
-          <slot><span class="text-gradient">Accessible</span> Starter for Astro</slot>
+        <h1 class="text-center text-3xl md:text-left lg:text-5xl">
+          <slot>Join a community of screen printers building <span class="text-gradient">profitable businesses</span> together</slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
-          <a class="button has-icon" href="https://github.com/markteekman/accessible-astro-starter">
-            <Icon name="ion:star-outline" />
-            Star on GitHub
-          </a>
-          <a
-            class="button has-icon color-secondary"
-            href="https://github.com/markteekman/accessible-astro-starter/blob/main/README.md"
-          >
-            <Icon name="ion:bookmark-outline" />
-            Read the Docs
+          <a class="button has-icon" href="https://my.theprintcrew.com/join">
+            <Icon name="ion:shirt" />
+            Join Now
           </a>
         </div>
       </div>
