--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon/components'
 
-const { src = '/astronaut-hero-img.webp' } = Astro.props
+const { src = '/press.png' } = Astro.props
 ---
 
 <section class="hero my-24">
@@ -12,7 +12,7 @@ const { src = '/astronaut-hero-img.webp' } = Astro.props
           <slot>Join a community of screen printers building <span class="text-gradient">profitable businesses</span> together</slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
-          <a class="button has-icon" href="https://my.theprintcrew.com/join">
+          <a class="button has-icon" href="https://my.theprintcrew.com/checkout/printcrew">
             <Icon name="ion:shirt" />
             Join Now
           </a>
