fixed login link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import { Icon } from 'astro-icon/components'
       <a href="/blog/">Blog</a>
     </li> -->
     <li class="menu-item">
-      <a href="https://my.theprintcrew" title="login" rel="external">Log In</a>
+      <a href="https://my.theprintcrew.com" title="login" rel="external">Log In</a>
     </li>
     <li class="menu-item">
       <a href="https://my.theprintcrew.com/checkout/printcrew" title="join-now" rel="external">Join Now</a>
