--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="call-to-action mt-24 mb-32 flex flex-col items-center gap-12 rounded-xl p-12 md:p-24">
     <h2 class="text-center text-3xl md:text-5xl">The Print Crew</h2>
-    <a href="https://my.theprintcrew.com/checkout/printcrew" class="text-center text-lg"> Join Now</a>
+    <a href="https://my.theprintcrew.com/checkout/print-crew" class="text-center text-lg"> Join Now</a>
   </div>
 </div>
 
