--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import { Icon } from 'astro-icon/components'
       <a href="https://my.theprintcrew.com" title="login" rel="external">Log In</a>
     </li>
     <li class="menu-item">
-      <a href="https://my.theprintcrew.com/checkout/printcrew" title="join-now" rel="external">Join Now</a>
+      <a href="https://my.theprintcrew.com/checkout/print-crew" title="join-now" rel="external">Join Now</a>
     </li>
   </Navigation>
 </header>
