--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,6 +31,7 @@ import ContentMedia from '../components/ContentMedia.astro'
           Learn from the success of others, and the mistakes, to hack your way to a successful business.
         </Feature>
       </div>
+      <h4>Not ready for the paid community? Check out the free forums at <a href="https://screenprint.chat">ScreenPrint.chat</a></h4>
     </div>
   </section>
   <!-- <ContentMedia imgSrc="/accessible-components.webp">
