--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,9 @@ import ContentMedia from '../components/ContentMedia.astro'
         </Feature>
       </div>
     </div>
-    <h4>Not ready for the paid community? Check out the free forums at <a href="https://screenprint.chat">ScreenPrint.chat</a></h4>
+    <div class="container">
+      <h4>Not ready for the paid community? Check out the free forums at <a href="https://screenprint.chat">ScreenPrint.chat</a></h4>
+      </div>
   </section>
   <!-- <ContentMedia imgSrc="/accessible-components.webp">
     <h2>Accessible Components</h2>
