added margin to chat callout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import ContentMedia from '../components/ContentMedia.astro'
         </Feature>
       </div>
     </div>
-    <div class="container">
+    <div class="container mt-4">
       <h4>Not ready for the paid community? Check out the free forums at <a href="https://screenprint.chat">ScreenPrint.chat</a></h4>
       </div>
   </section>
