--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ const { src = '/press.png' } = Astro.props
     <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
       <div class="flex flex-col items-center gap-8 md:items-start">
         <h1 class="text-center text-3xl md:text-left lg:text-5xl">
-          <slot>Join a community of screen printers building <span class="text-gradient">profitable businesses</span> together</slot>
+          <slot>Join a free community of screen printers building <span class="text-gradient">profitable businesses</span> together</slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
           <a class="button has-icon" href="https://my.theprintcrew.com/checkout/printcrew">
