--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@ const { src = '/press.png' } = Astro.props
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
           <a class="button has-icon" href="https://my.theprintcrew.com/checkout/printcrew">
             <Icon name="ion:shirt" />
-            Join Now
+            Join for Free
           </a>
         </div>
       </div>
