--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const currentYear = new Date().getFullYear()
   <section class="py-8">
     <div class="container">
       <p>
-        &copy; {currentYear} - The Print Crew | A FREE community created by <a href="https://jessepoteet.com">Jesse Poteet</a> & <a href="https://startupscreenprinting.com">Startup Screen Printing</a> | All Rights Reserved
+        &copy; {currentYear} - The Print Crew | A FREE community created by Jesse Poteet & <a href="https://startupscreenprinting.com">Startup Screen Printing</a> | All Rights Reserved
       </p>
     </div>
   </section>
